--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "start": "vite preview --port $PORT"
   },
   "dependencies": {
+    "@uiw/react-json-view": "^2.0.0-alpha.30",
     "axios": "^1.7.8",
     "flowbite-react": "^0.10.2",
     "jwt-decode": "^4.0.0",
@@ -18,8 +19,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^10.0.6",
-    "react-json-view": "latest"
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
